implement new metrics

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,110 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+models/1745627292_actor.weights.h5
+models/1745627292_critic.weights.h5
+models/1745628081_actor.weights.h5
+models/1745628081_critic.weights.h5
+models/1745628848_actor.weights.h5
+models/1745628848_critic.weights.h5
+models/1745629616_actor.weights.h5
+models/1745629616_critic.weights.h5
+models/1745630480_actor.weights.h5
+models/1745630480_critic.weights.h5
+models/1745631798_actor.weights.h5
+models/1745631798_critic.weights.h5
+models/1745633692_actor.weights.h5
+models/1745633692_critic.weights.h5
+models/1745635280_actor.weights.h5
+models/1745635280_critic.weights.h5
+models/1745636645_actor.weights.h5
+models/1745636645_critic.weights.h5
+models/1745637613_actor.weights.h5
+models/1745637613_critic.weights.h5
+models/1745638737_actor.weights.h5
+models/1745638737_critic.weights.h5
+models/1745640041_actor.weights.h5
+models/1745640041_critic.weights.h5
+models/1745641157_actor.weights.h5
+models/1745641157_critic.weights.h5
+models/1745642167_actor.weights.h5
+models/1745642167_critic.weights.h5
+models/1745643745_actor.weights.h5
+models/1745643745_critic.weights.h5
+models/1745644858_actor.weights.h5
+models/1745644858_critic.weights.h5
+models/1745645639_actor.weights.h5
+models/1745645639_critic.weights.h5
+models/1745646381_actor.weights.h5
+models/1745646381_critic.weights.h5
+models/1745647338_actor.weights.h5
+models/1745647338_critic.weights.h5
+models/1745647913_actor.weights.h5
+models/1745647913_critic.weights.h5
+models/1745648494_actor.weights.h5
+models/1745648494_critic.weights.h5
+models/1745649111_actor.weights.h5
+models/1745649111_critic.weights.h5
+models/1745649657_actor.weights.h5
+models/1745649657_critic.weights.h5
+models/1745650131_actor.weights.h5
+models/1745650131_critic.weights.h5
+models/1745651026_actor.weights.h5
+models/1745651026_critic.weights.h5
+models/1745651620_actor.weights.h5
+models/1745651620_critic.weights.h5
+models/1745652243_actor.weights.h5
+models/1745652243_critic.weights.h5
+models/1745652870_actor.weights.h5
+models/1745652870_critic.weights.h5
+models/1745653628_actor.weights.h5
+models/1745653628_critic.weights.h5
+models/1745654560_actor.weights.h5
+models/1745654560_critic.weights.h5
+models/1745655464_actor.weights.h5
+models/1745655464_critic.weights.h5
+models/1745656544_actor.weights.h5
+models/1745656544_critic.weights.h5
+models/1745657297_actor.weights.h5
+models/1745657297_critic.weights.h5
+models/1745658454_actor.weights.h5
+models/1745658454_critic.weights.h5
+models/1745659585_actor.weights.h5
+models/1745659585_critic.weights.h5
+models/1745660418_actor.weights.h5
+models/1745660418_critic.weights.h5
+models/1745661468_actor.weights.h5
+models/1745661468_critic.weights.h5
+models/1745662614_actor.weights.h5
+models/1745662614_critic.weights.h5
+models/1745663645_actor.weights.h5
+models/1745663645_critic.weights.h5
+models/1745664868_actor.weights.h5
+models/1745664868_critic.weights.h5
+models/1745665903_actor.weights.h5
+models/1745665903_critic.weights.h5
+models/1745667252_actor.weights.h5
+models/1745667252_critic.weights.h5
+models/1745668579_actor.weights.h5
+models/1745668579_critic.weights.h5
+models/1745669511_actor.weights.h5
+models/1745669511_critic.weights.h5
+models/1745670931_actor.weights.h5
+models/1745670931_critic.weights.h5
+models/1745671949_actor.weights.h5
+models/1745671949_critic.weights.h5
+models/1745672916_actor.weights.h5
+models/1745672916_critic.weights.h5
+models/1745674921_actor.weights.h5
+models/1745674921_critic.weights.h5
+models/1745676082_actor.weights.h5
+models/1745676082_critic.weights.h5
+models/1745677621_actor.weights.h5
+models/1745677621_critic.weights.h5
+models/1745679348_actor.weights.h5
+models/1745679348_critic.weights.h5
+checkpoint/actor_model.weights.h5
+checkpoint/actor_target.weights.h5
+checkpoint/critic_model.weights.h5
+checkpoint/critic_target.weights.h5
+logs/1745626956.7550728/events.out.tfevents.1745626956.Pedro.356468.0.v2
