--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,23 @@ checkpoint/actor_target.weights.h5
 checkpoint/critic_model.weights.h5
 checkpoint/critic_target.weights.h5
 logs/1745626956.7550728/events.out.tfevents.1745626956.Pedro.356468.0.v2
+logs/1746398610.7736793/events.out.tfevents.1746398610.Pedro.4088294.0.v2
+logs/1746398610.7736793/notes.txt
+logs/1746398644.7552598/events.out.tfevents.1746398644.Pedro.4110888.0.v2
+logs/1746398644.7552598/notes.txt
+logs/1746401907.0458796/events.out.tfevents.1746401907.Pedro.254114.0.v2
+logs/1746410711.9944286/events.out.tfevents.1746410711.Pedro.1563983.0.v2
+logs/1746410711.9944286/notes.txt
+logs/1746433439.4111845/events.out.tfevents.1746433439.Pedro.4046059.0.v2
+logs/1746433439.4111845/notes.txt
+logs/1746433482.919816/events.out.tfevents.1746433482.Pedro.4106312.0.v2
+logs/1746433482.919816/notes.txt
+logs/gamma_0_95/events.out.tfevents.1746398630.Pedro.4097708.0.v2
+logs/gamma_0_95/notes.txt
+models/1746406488_actor.weights.h5
+models/1746420524_actor.weights.h5
+models/1746423833_actor.weights.h5
+models/1746500406_actor.weights.h5
+models/1746596518_actor.weights.h5
+models/1746609047_actor.weights.h5
+models/1746614960_actor.weights.h5
